--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<?php
+<!-- <?php
 // make sure "0global_settings.php" file exists and require it
 if(!isset($_SERVER["DOCUMENT_ROOT"])){trigger_error("_SERVER[\"DOCUMENT_ROOT\"] not set");header("HTTP/1.1 500 Internal Server Error");exit(0);}
 $global_settings_php=$_SERVER["DOCUMENT_ROOT"]."/0global_settings.php";
@@ -20,7 +20,7 @@ if((($default_timezone=ini_get('date.timezone'))===FALSE)||(1>strlen($default_ti
     date_default_timezone_set($default_timezone);
 }
 $current_year=@date("Y");
-?>
+?> -->
 
 <!DOCTYPE HTML>
 <html lang="en">
