--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@ $current_year=@date("Y");
 <!--[if IE 7]>
     <link rel="stylesheet" href="/assets/css/fontello-ie7.css"><![endif]-->
 
-    <link href="/assets/css/font.css" rel="stylesheet" type="text/css">
-    <link href="/assets/css/fontello.css" rel="stylesheet" type="text/css">
-    <link href="/assets/css/base.css" rel="stylesheet" type="text/css">
-    <link href="/assets/css/skeleton.css" rel="stylesheet" type="text/css">
-    <link href="/assets/css/main.css" rel="stylesheet" type="text/css">
-    <link href="/assets/css/magnific-popup.css" rel="stylesheet"  />
-    <link href="/assets/css/flexslider.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/assets/jquery.cookieBar.css">
+    <link href="assets/css/font.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/fontello.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/base.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/skeleton.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/main.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/magnific-popup.css" rel="stylesheet"  />
+    <link href="assets/css/flexslider.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/jquery.cookieBar.css">
 
 
 
@@ -893,20 +893,20 @@ $current_year=@date("Y");
 
 	
 <!--Javascript-->
-<script src="/assets/js/jquery-1.9.1.min.js" type="text/javascript"></script>
-<script src="/assets/js/jquery-migrate-1.2.1.js"></script>
-<script src="/assets/js/jquery.flexslider-min.js" type="text/javascript"></script>
-<script src="/assets/js/jquery.easing.1.3.js" type="text/javascript"></script>
-<script src="/assets/js/jquery.scrollTo-min.js" type="text/javascript"></script>
-<script src="/assets/js/waypoints.js" type="text/javascript"></script>
-<script src="/assets/js/jquery.parallax-1.1.3.js"></script>
-<script src="/assets/js/modernizr.custom.js"></script>
-<script src="/assets/js/jquery.ui.totop.min.js" type="text/javascript"></script>
-<script src="/assets/js/jquery.magnific-popup.js" type="text/javascript"></script>
-<script src="/assets/js/jquery.appear.min.js"></script>
-<script src="/assets/js/jquery.timer.js"></script>
-<script src="/assets/js/script.js" type="text/javascript"></script>
-    <script src="/assets/jquery.cookieBar.js"></script>
+<script src="assets/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+<script src="assets/js/jquery-migrate-1.2.1.js"></script>
+<script src="assets/js/jquery.flexslider-min.js" type="text/javascript"></script>
+<script src="assets/js/jquery.easing.1.3.js" type="text/javascript"></script>
+<script src="assets/js/jquery.scrollTo-min.js" type="text/javascript"></script>
+<script src="assets/js/waypoints.js" type="text/javascript"></script>
+<script src="assets/js/jquery.parallax-1.1.3.js"></script>
+<script src="assets/js/modernizr.custom.js"></script>
+<script src="assets/js/jquery.ui.totop.min.js" type="text/javascript"></script>
+<script src="assets/js/jquery.magnific-popup.js" type="text/javascript"></script>
+<script src="assets/js/jquery.appear.min.js"></script>
+<script src="assets/js/jquery.timer.js"></script>
+<script src="assets/js/script.js" type="text/javascript"></script>
+    <script src="assets/jquery.cookieBar.js"></script>
 
 
     <script>
