--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@ $current_year=@date("Y");
 			<div class="topSocials">
 				<ul class="one columns">
 					<li><a href="#"><i class="icon-facebook"></i></a></li>
-					<li><a href="#"><i class="icon-gplus"></i></a></li>
+					<li><a href="#"><i class="icon-twitter"></i></a></li>
 				</ul>
-						<ul class="one columns">
+<!-- 						<ul class="one columns">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-pinterest"></i></a></li>
-						</ul>
+						</ul> -->
 			</div>
 			<!--End top socials-->
 			</div>
